opengl/eglcontext: tell Qt when the OpenGL context gets changed

Otherwise, Qt thinks the old context is still current and will do things like
destroying VAOs with KWin's context, which ends up destroying the VAO of the
context and breaks rendering.

BUG: 479094


(cherry picked from commit 8c3332f6195dcf213c481c28ddbff680f20a20a9)